--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,16 @@
       "Image\\": "lib"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Image\\Tests\\": "tests/unit"
+    }
+  },
   "require": {
+    "php": ">=5.6",
     "ext-gd": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*"
+    "phpunit/phpunit": "^5.7||^6.5"
   }
 }
