--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,4 +18,10 @@
     </testsuite>
   </testsuites>
 
+  <filter>
+    <whitelist>
+      <directory suffix=".php">lib</directory>
+    </whitelist>
+  </filter>
+
 </phpunit>
